fix: moderation btn is now visible on default page if user has moderation role, and on dashboard not

--- a/src/components/Headers/AppHeader/AppHeader.module.scss
+++ b/src/components/Headers/AppHeader/AppHeader.module.scss
@@ -46,6 +46,7 @@
   height: 44px;
   display: flex;
   justify-content: center;
+  gap: 12px;
 
   @include mobile {
     position: fixed;
